【Update】class Ball && Add Trace && Easing

--- a/debug-ground/debug-dev-on-browser/index.html
+++ b/debug-ground/debug-dev-on-browser/index.html
@@ -77,6 +77,8 @@
                     if (name) {
                         localStorage.setItem('script', name)
                         location.reload();
+                    } else {
+                        traverseDir(tag);
                     }
                 });
             }
