添加html5基础动画-第八章学习demo

--- a/debug-ground/debug-dev-on-browser/Foundation-HTML5-Animation-with-JavaScript.html
+++ b/debug-ground/debug-dev-on-browser/Foundation-HTML5-Animation-with-JavaScript.html
@@ -44,6 +44,11 @@
       <b>chapter 8 缓动和弹动</b>
       <ul>
         <li name="chapter8/easing01">缓动基础示例1</li>
+        <li name="chapter8/easing02">可拖拽的缓动小球</li>
+        <li name="chapter8/easingToMouse">追随鼠标的小球</li>
+        <li name="chapter8/chainSpring">链式弹跳</li>
+        <li name="chapter8/multiSpring">多个目标点的弹跳</li>
+        <li name="chapter8/tripleSpring">三角弹跳</li>
       </ul>
     </li>
   </ul>
